<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/result_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ResultsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintGuide_begin="205dp" />

    <TextView
        android:id="@+id/tv_bin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/bin"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_output_bin"
        app:layout_constraintEnd_toStartOf="@+id/tv_output_bin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_output_bin" />

    <TextView
        android:id="@+id/tv_output_bin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:lines="1"
        android:text="@string/bin"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_scheme_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:lines="1"
        android:text="@string/scheme_network"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bin" />

    <TextView
        android:id="@+id/tv_output_scheme_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/scheme_network"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_scheme_network"
        app:layout_constraintTop_toBottomOf="@+id/tv_scheme_network" />

    <TextView
        android:id="@+id/tv_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:lines="1"
        android:text="@string/brand"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_output_scheme_network" />

    <TextView
        android:id="@+id/tv_output_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/brand"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_brand"
        app:layout_constraintTop_toBottomOf="@+id/tv_brand" />

    <TextView
        android:id="@+id/tv_card_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:lines="1"
        android:text="@string/card_number"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_output_prepaid" />

    <TextView
        android:id="@+id/tv_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/length"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_card_number"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_number" />

    <TextView
        android:id="@+id/tv_luhn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:lines="1"
        android:text="@string/luhn"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/tv_length"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_number" />

    <TextView
        android:id="@+id/tv_output_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/length"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_length"
        app:layout_constraintTop_toBottomOf="@+id/tv_length" />

    <TextView
        android:id="@+id/tv_output_luhn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/luhn"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_luhn"
        app:layout_constraintTop_toBottomOf="@+id/tv_luhn" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:lines="1"
        android:text="@string/type"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_output_bin" />

    <TextView
        android:id="@+id/tv_output_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/type"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_type"
        app:layout_constraintTop_toBottomOf="@+id/tv_type" />

    <TextView
        android:id="@+id/tv_prepaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:lines="1"
        android:text="@string/prepaid"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_output_type" />

    <TextView
        android:id="@+id/tv_output_prepaid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/prepaid"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_prepaid"
        app:layout_constraintTop_toBottomOf="@+id/tv_prepaid" />

    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:lines="1"
        android:text="@string/country"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_output_brand" />

    <androidx.emoji.widget.EmojiAppCompatTextView
        android:id="@+id/etv_flag"
        android:layout_width="25dp"
        android:layout_height="18dp"
        android:layout_marginTop="10dp"
        android:text="Test"
        app:layout_constraintStart_toStartOf="@+id/tv_country"
        app:layout_constraintTop_toBottomOf="@+id/tv_country" />

    <TextView
        android:id="@+id/tv_name_country"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/name_country"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/etv_flag"
        app:layout_constraintStart_toEndOf="@+id/etv_flag"
        app:layout_constraintTop_toTopOf="@+id/etv_flag" />

    <TextView
        android:id="@+id/tv_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/latitude"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/etv_flag"
        app:layout_constraintTop_toBottomOf="@+id/etv_flag" />

    <TextView
        android:id="@+id/tv_output_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:lines="1"
        android:text="@string/latitude"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_latitude"
        app:layout_constraintStart_toEndOf="@+id/tv_latitude" />

    <TextView
        android:id="@+id/tv_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:text="@string/longitude"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_output_latitude"
        app:layout_constraintStart_toEndOf="@+id/tv_output_latitude" />

    <TextView
        android:id="@+id/tv_output_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:lines="1"
        android:text="@string/longitude"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_longitude"
        app:layout_constraintStart_toEndOf="@+id/tv_longitude" />

    <TextView
        android:id="@+id/tv_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:lines="1"
        android:text="@string/bank"
        android:textAllCaps="true"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_latitude" />

    <TextView
        android:id="@+id/tv_output_name_bank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/name_bank"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_bank"
        app:layout_constraintTop_toBottomOf="@+id/tv_bank" />

    <TextView
        android:id="@+id/tv_output_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/city"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_output_name_bank" />

    <TextView
        android:id="@+id/tv_output_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:lines="1"
        android:linksClickable="true"
        android:text="@string/url"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_output_city"
        app:layout_constraintTop_toBottomOf="@+id/tv_output_city" />

    <TextView
        android:id="@+id/tv_output_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="phone"
        android:lines="1"
        android:linksClickable="true"
        android:text="@string/phone"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_output_url"
        app:layout_constraintTop_toBottomOf="@+id/tv_output_url" />

</androidx.constraintlayout.widget.ConstraintLayout>